<resources>
    <string name="app_name">GeoPesca - Pesca Sustentável</string>
    <string name="lbl_latitude">Latitude (S)</string>
    <string name="lbl_longitude">Longitude (W)</string>
    <string name="lbl_btnPesquisa">Pesquisa</string>
    <string name="lbl_btnLocal">Onde estou ?</string>
    <string name="lbl_segundos">\"</string>
    <string name="lbl_minutos">\'</string>
    <string name="lbl_graus">º</string>
    <string name="lbl_resumo">APLICATIVO MOBILE E OFFLINE PARA IDENTIFICAR OS LOCAIS
                              PROIBIDOS PARA A PESCA NO LITORAL NORTE DO ESTADO DE
                              SP</string>
    <string name="lbl_autores">José Maria da Silva e Rodrigo Maia Costa</string>

    <string name="lbl_precisao">Precisão de %S metros</string>

    <string name="lbl_msg_campos_vazios">Campos vazios, click no botão Onde Estou?</string>
    <string name="lbl_msg_limites_mapeados">Este local está fora dos limites mapeados.</string>
    <string name="lbl_msg_erro_coordenadas">Atenção, coordenadas inválidas.</string>
    <string name="lbl_msg_erro_bancodados">Problemas com banco de dados.</string>
    <string name="lbl_msg_erro_satelites">Aguarde localizando os satélites.</string>

    <string name="lbl_msg_resultado">Não consta proibição ou restrição para pesca no local pesquisado.</string>

    <string name="lbl_title_gps">Configuração do GPS</string>
    <string name="lbl_dialog_gps">GPS não está habilitado. Para habilitá-lo utilize o botão configuração ?</string>
    <string name="lbl_config_gps">Configuração</string>
    <string name="lbl_btn_cancelar">Cancelar</string>

    <string name="lbl_mnu_sobre">Sobre</string>
    <string name="lbl_mnu_contato">Contato</string>

</resources>
